--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-reanimated": "^2.13.0",
     "react-native-safe-area-context": "^4.0.1",
     "react-native-screens": "^3.12.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-vision-camera": "^2.15.2",
     "react-native-webview": "^11.26.1",
     "react-router-dom": "^6.8.1"
