--- a/package.json
+++ b/package.json
@@ -20,15 +20,17 @@
     "express": "^4.18.2",
     "moti": "^0.17.1",
     "react": "17.0.2",
-    "react-native": "0.67.3",
+    "react-native": "^0.67.3",
     "react-native-gesture-handler": "^2.1.1",
     "react-native-reanimated": "^2.13.0",
     "react-native-safe-area-context": "^4.0.1",
     "react-native-screens": "^3.12.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-vision-camera": "^2.15.2",
     "react-native-webview": "^11.26.1",
-    "react-router-dom": "^6.8.1"
+    "react-router-dom": "^6.8.1",
+    "swiper": "^9.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
