--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-reanimated": "^2.13.0",
     "react-native-safe-area-context": "^4.0.1",
     "react-native-screens": "^3.12.0",
+    "react-native-svg": "^13.8.0",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-vision-camera": "^2.15.2",
